--- a/app/views/rosters/show.html.erb
+++ b/app/views/rosters/show.html.erb
@@ -9,7 +9,7 @@
       </tr>
       </thead>
       <tbody>
-      <% @league.teams.each_with_index do |team| %>
+      <% @roster.players.each do |players| %>
         <tr>
           <th scope="row"><%= index+1 %></th>
           <td>  </td>
