--- a/app/views/admin/application/_navigation.html.erb
+++ b/app/views/admin/application/_navigation.html.erb
@@ -14,11 +14,15 @@ as defined by the routes in the `admin/` namespace
     class: "navigation__link"
   ) %>
 
-  <% Administrate::Namespace.new(namespace).resources.each do |resource| %>
-    <%= link_to(
-      display_resource_name(resource),
-      [namespace, resource_index_route_key(resource)],
-      class: "navigation__link navigation__link--#{nav_link_state(resource)}"
-    ) %>
-  <% end %>
+  <%= link_to(
+    "Users",
+    admin_users_path,
+    class: "navigation__link"
+  ) %>
+
+  <%= link_to(
+      "Upload Data",
+      admin_data_upload_path,
+      class: "navigation__link"
+  ) %>
 </nav>
