--- a/app/views/admin/application/_navigation.html.erb
+++ b/app/views/admin/application/_navigation.html.erb
@@ -21,8 +21,8 @@ as defined by the routes in the `admin/` namespace
   ) %>
 
   <%= link_to(
-      "Upload Data",
-      admin_data_upload_path,
+      "Upload Players",
+      admin_edit_players_path,
       class: "navigation__link"
   ) %>
 </nav>
