--- a/app/views/admin/application/_navigation.html.erb
+++ b/app/views/admin/application/_navigation.html.erb
@@ -21,8 +21,14 @@ as defined by the routes in the `admin/` namespace
   ) %>
 
   <%= link_to(
-      "Upload Players",
-      admin_edit_players_path,
+      "Upload Stats",
+      admin_edit_stats_path,
       class: "navigation__link"
+  ) %>
+
+  <%= link_to(
+    "Upload Players",
+    admin_edit_players_path,
+    class: "navigation__link"
   ) %>
 </nav>
