--- a/app/views/admin/data/edit_stats.html.erb
+++ b/app/views/admin/data/edit_stats.html.erb
@@ -1,9 +1,19 @@
 <div class="row">
+  <div class="col-sm-10 ml-auto mr-auto">
+    <h1 class="text-center"> Upload Player Stats</h1>
+  </div>
+
+
   <div class="col-lg-4 col-md-6 ml-auto mr-auto">
-    <h1 class="text-center"> Upload Stats </h1>
+    <br>
     <%= form_tag(admin_update_stats_url, method: "post", multipart: true) do %>
-      <%= file_field_tag :file %>
-      <%= submit_tag( "Import" ) %>
+      <%= collection_select :week, :id, Week.all, :id, :number, {include_blank: true}, { class: 'form-control', required: true }  %>
+      <br>
+      <%= select :player, :type, [["Offense", "offense"], ["Defenses", "defense"], ["Kicker", "kicker"]], { include_blank: true, class: 'form-control', required: true }  %>
+      <br>
+      <%= file_field_tag :file, {required: true} %>
+      <br>
+      <%= submit_tag( "Import Stats", data: { confirm: "Are you sure?"} ) %>
     <% end %>
   </div>
 </div>
