--- a/app/views/rosters/edit.html.erb
+++ b/app/views/rosters/edit.html.erb
@@ -16,7 +16,7 @@
                                       selected: "#{@roster[:roster_spots][position][i]}",
                                       disabled: @roster.team.used_players
                                   },
-                                  { class: 'form-control' } %>
+                                  { class: 'form-control select2' } %>
           </div>
         <% end %>
       <% end %>
