--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,10 @@
 // $navbar-default-bg: #312312;
 // $light-orange: #ff8c00;
 // $navbar-default-color: $light-orange;
+/*
+ *= require select2
+ *= require select2-bootstrap
+ */
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
