--- a/app/views/rosters/show.html.erb
+++ b/app/views/rosters/show.html.erb
@@ -24,6 +24,11 @@
         </tr>
       <% end %>
       </tbody>
+      <tfoot>
+        <td></td>
+        <td>Total</td>
+        <td><%= @roster.total_score %></td>
+      </tfoot>
     </table>
   </div>
 </div>
