--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -12,6 +12,7 @@
         <th scope="col">#</th>
         <th scope="col">Manager</th>
         <th scope="col">Team Name</th>
+        <th scope="col">Season Score</th>
       </tr>
       </thead>
       <tbody>
@@ -20,6 +21,7 @@
             <th scope="row"><%= index+1 %></th>
             <td><%= link_to(team.user.name, user_path(team.user))%></td>
             <td><%= link_to(team.name, team_path(team) ) %></td>
+            <td><%=  %></td>
           </tr>
         <% end %>
       </tbody>
