--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -21,7 +21,7 @@
             <th scope="row"><%= index+1 %></th>
             <td><%= link_to(team.user.name, user_path(team.user))%></td>
             <td><%= link_to(team.name, team_path(team) ) %></td>
-            <td><%=  %></td>
+            <td><%= team.score %></td>
           </tr>
         <% end %>
       </tbody>
