--- a/app/views/rosters/show.html.erb
+++ b/app/views/rosters/show.html.erb
@@ -27,7 +27,7 @@
       <tfoot>
         <td></td>
         <td>Total</td>
-        <td><%= @roster.total_score %></td>
+        <td><%= @roster.score %></td>
       </tfoot>
     </table>
   </div>
