adding ability to join league

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,8 @@
 
 <br>
 
-<%= link_to "Create A League", new_league_path %>
+<%= link_to "Create A League", new_league_path %> <br>
+<%= link_to "Join A League", add_user_to_league_path %>
 
 <br>
 <br>
