--- a/app/views/leagues/edit.hml.erb
+++ b/app/views/leagues/edit.hml.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-4 col-md-6 ml-auto mr-auto">
-    <h1 class="text-center">Edit League League</h1>
+    <h1 class="text-center">Edit League</h1>
     <%= render "form" %>
   </div>
 </div>
