--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -10,7 +10,7 @@
       <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Manager</th>
+        <th scope="col">User</th>
         <th scope="col">Team Name</th>
         <th scope="col">Season Score</th>
       </tr>
@@ -19,7 +19,7 @@
         <% @league.teams.each_with_index do |team, index| %>
           <tr>
             <th scope="row"><%= index+1 %></th>
-            <td><%= link_to(team.user.name, user_path(team.user))%></td>
+            <td><%= team.user.name %></td>
             <td><%= link_to(team.name, team_path(team) ) %></td>
             <td><%= team.score %></td>
           </tr>
